fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.6.6:
  - Moved management of data files (open/write/md5sum) from extract.c to a separate object (datafile.c)
  - Partitions already mounted are remounted with MS_BIND to see the files hidden by the mount directories
  - Fix: don't remove the archive file when savefs/savedir fails because the archive already exists
* 0.6.5 (2010-01-07):
  - Fixed compilation issues (pkg-config problems especially on systems with e2fsprogs < 1.41.2)
  - Retry with the default level (gzip -6) when compression of a data block lacks memory with bzip2/lzma
* 0.6.4 (2010-01-03):
  - Improved the manpage: documented the long options, added examples, links, ...
  - Reorganized code of the archive-io thread (split archive into archreader and archwriter)
  - Fixed critical bug: integer overflow for "u16 headerlen" when sum of attributes size > 65535
  - Introduced new fileformat: "FsArCh_002", but old format "FsArCh_001" is also supported
  - Using code from libblkid instead of complex implementation to read ntfs labels
  - Switch to pkg-config in configure.ac and Makefile.am (contribution from Michael Biebl)
* 0.6.3 (2009-12-28):
  - Dont fail when e2fsck returns 1 in extfs_mkfs() since it means the filesystem has been fixed
  - Extended options (stride and stripe_width), max_mount_count, check_interval are now preserved for ext{2,3,4}
  - Display the percentage of the operation which has been completed when verbose >= 1 (sort of progress bar)
  - Display information about physical disks as well as partitions in "fsarchiver probe <mode>"
  - Fixed bug with archive splitting: the split size was sometimes incorrect due to an integer overflow
  - Added option "--exclude/-e <pattern>" to exclude files/dirs. It works for both archiving and extracting.
  - Added support for long options (--option) using getopt_long