@@ -1,9 +1,11 @@
 fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
 =====================================================================
 * 0.6.6:
-  - Moved management of data files (open/write/md5sum) from extract.c to a separate object (datafile.c)
-  - Partitions already mounted are remounted with MS_BIND to see the files hidden by the mount directories
   - Fix: don't remove the archive file when savefs/savedir fails because the archive already exists
+  - Partitions already mounted are remounted with MS_BIND to see the files hidden by the mount directories
+  - Analyse filesystems only when they are all accessible to prevent having to wait and then get an error
+  - Moved management of data files (open/write/md5sum) from extract.c to a separate object (datafile.c)
+  - Important internal changes and simplifications especially in create.c (invisible changes for the end user)
 * 0.6.5 (2010-01-07):
   - Fixed compilation issues (pkg-config problems especially on systems with e2fsprogs < 1.41.2)
   - Retry with the default level (gzip -6) when compression of a data block lacks memory with bzip2/lzma
